少し変更しました

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_shopping"
-        android:name="com.erin.app_03.ui.home.HomeFragment"
+        android:name="com.erin.app_03.ui.shopping.ShoppingFragment"
         android:label="@string/title_shopping"
         tools:layout="@layout/fragment_shopping" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.erin.app_03.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_account"
+        android:name="com.erin.app_03.ui.account.AccountFragment"
+        android:label="@string/title_account"
+        tools:layout="@layout/fragment_account" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.erin.app_03.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_point"
+        android:name="com.erin.app_03.ui.point.PointFragment"
+        android:label="@string/title_point"
+        tools:layout="@layout/fragment_point" />
 </navigation>
