アカウント写真を追加したはずが、表示されません。

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.account.AccountFragment">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="135dp"
+        android:layout_marginLeft="135dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/avatars" />
+
     <TextView
         android:id="@+id/text_account"
         android:layout_width="match_parent"
@@ -26,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:text="Username"
         android:textStyle="bold"
         android:textSize="20sp"
@@ -39,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="200dp"
         android:layout_marginLeft="200dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
         android:text="Mio Suzuki"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
-        android:layout_marginTop="175dp"
+        android:layout_marginTop="225dp"
         android:text="E-mail address"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -64,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="200dp"
         android:layout_marginLeft="200dp"
-        android:layout_marginTop="175dp"
+        android:layout_marginTop="225dp"
         android:text="OOXX.email.com"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="300dp"
         android:text="Address"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -89,7 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="200dp"
         android:layout_marginLeft="200dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="300dp"
         android:text="O-X-O, OO, XX, OOcity, \nXX, Japan"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,7 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginLeft="36dp"
-        android:layout_marginTop="325dp"
+        android:layout_marginTop="375dp"
         android:text="Plan"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -114,7 +125,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="200dp"
         android:layout_marginLeft="200dp"
-        android:layout_marginTop="325dp"
+        android:layout_marginTop="375dp"
         android:text="Regular"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
