activityを消しました。

--- a/app/src/main/res/layout/fragment_shopping.xml
+++ b/app/src/main/res/layout/fragment_shopping.xml
@@ -7,6 +7,17 @@
     tools:context=".ui.shopping.ShoppingFragment">
 
     <TextView
+        android:id="@+id/activityTitle1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteY="329dp" />
+
+    <TextView
         android:id="@+id/text_shopping"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
