--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.account.AccountFragment">
 
     <TextView
-        android:id="@+id/activityTitle2"
+        android:id="@+id/activityTitleAccount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="30sp"
