--- a/app/src/main/res/layout/fragment_point.xml
+++ b/app/src/main/res/layout/fragment_point.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.point.PointFragment">
 
     <TextView
-        android:id="@+id/activityTitle3"
+        android:id="@+id/activityTitlePoint"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="30sp"
