--- a/app/src/main/res/layout/fragment_shopping.xml
+++ b/app/src/main/res/layout/fragment_shopping.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.shopping.ShoppingFragment">
 
     <TextView
-        android:id="@+id/activityTitle1"
+        android:id="@+id/activityTitleShopping"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="30sp"
