--- a/app/src/main/res/layout/fragment_point.xml
+++ b/app/src/main/res/layout/fragment_point.xml
@@ -7,8 +7,6 @@
     tools:context="com.erin.Everdrobe.ui.point.PointFragment">
 
 
-
-
     <TextView
         android:id="@+id/activityTitlePoint"
         android:layout_width="0dp"
@@ -46,6 +44,7 @@
         android:layout_marginLeft="36dp"
         android:text="Get Points"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,6 +55,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="100dp"
+        android:textStyle="bold"
         android:text="Use Points"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,6 +68,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="100dp"
+        android:textStyle="bold"
         android:text="Remaining Clothes"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,13 +76,14 @@
 
     <TextView
         android:id="@+id/text_yourpoint"
-        android:layout_width="64dp"
-        android:layout_height="19dp"
+        android:layout_width="140dp"
+        android:layout_height="30dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="200dp"
         android:text="Your point"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_usepoints" />
 
@@ -93,7 +95,6 @@
         android:layout_marginLeft="80dp"
         android:layout_marginTop="33dp"
         android:text="How To"
-        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
