ListView を作成しましたが、画像の配置方法が難しいのでまた今度調べてみます。多分変えます。

--- a/app/src/main/res/layout/fragment_shopping.xml
+++ b/app/src/main/res/layout/fragment_shopping.xml
@@ -6,7 +6,15 @@
     android:layout_height="match_parent"
     tools:context="com.erin.Everdrobe.ui.shopping.ShoppingFragment">
 
-    <TextView
+
+        <ListView
+            android:id="@+id/list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </ListView>
+
+    <!--<TextView
         android:id="@+id/activityTitleShopping"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -29,5 +37,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
