--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,19 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+ <!-- <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.erin.Everdrobe.ui.shopping.DetailFragment">
+-->
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="fragment detailだよ"/>
 
-    </FrameLayout>
+ <ImageView
+     android:id="@+id/imageView3"
+     android:layout_width="162dp"
+     android:layout_height="259dp"
+     android:layout_marginEnd="130dp"
+     android:layout_marginRight="130dp"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintTop_toTopOf="parent"
+     app:srcCompat="@drawable/item1" />
+
+ <TextView
+     android:id="@+id/text_product"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="40dp"
+     android:layout_marginLeft="40dp"
+     android:layout_marginTop="20dp"
+     android:text="Product name"
+     android:textStyle="bold"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+ <TextView
+     android:id="@+id/text_product2"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="250dp"
+     android:layout_marginLeft="250dp"
+     android:layout_marginTop="20dp"
+     android:text="Earring"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+
+ <TextView
+     android:id="@+id/text_user"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="40dp"
+     android:layout_marginLeft="40dp"
+     android:layout_marginTop="20dp"
+     android:text="Username"
+     android:textStyle="bold"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/text_product" />
+
+ <TextView
+     android:id="@+id/text_user2"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="250dp"
+     android:layout_marginLeft="250dp"
+     android:layout_marginTop="20dp"
+     android:text="Mai_0302"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/text_product" />
+
+ <TextView
+     android:id="@+id/text_size"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="40dp"
+     android:layout_marginLeft="40dp"
+     android:layout_marginTop="20dp"
+     android:text="Size"
+     android:textStyle="bold"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/text_user" />
+
+ <TextView
+     android:id="@+id/text_size2"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="250dp"
+     android:layout_marginLeft="250dp"
+     android:layout_marginTop="20dp"
+     android:text="S"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/text_user2" />
+
+ <TextView
+     android:id="@+id/text_condi"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="40dp"
+     android:layout_marginLeft="40dp"
+     android:layout_marginTop="32dp"
+     android:text="Condition"
+     android:textStyle="bold"
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/text_size" />
+
+ <TextView
+     android:id="@+id/text_condi2"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginStart="250dp"
+     android:layout_marginLeft="250dp"
+     android:layout_marginTop="20dp"
+     android:text="Unused."
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/text_size2" />
+
+ <Button
+     android:id="@+id/button_borrow"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_marginTop="30dp"
+     android:layout_marginEnd="160dp"
+     android:layout_marginRight="160dp"
+     android:text="Borrow"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintTop_toBottomOf="@+id/text_condi2" />
+
+
+ <!--  </FrameLayout>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
