--- a/app/src/main/res/layout/fragment_confirm.xml
+++ b/app/src/main/res/layout/fragment_confirm.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="150dp"
         android:layout_weight="1"
         android:text="Do you really want to borrow it?"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
