--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -22,6 +22,7 @@
      android:layout_marginRight="130dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
+     app:srcCompat="@drawable/item1"
       />
 
  <TextView
@@ -30,7 +31,8 @@
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginLeft="40dp"
-     android:layout_marginTop="20dp"
+     android:layout_marginTop="32dp"
+     android:textSize="17sp"
      android:text="Product name"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +44,8 @@
      android:layout_height="wrap_content"
      android:layout_marginStart="250dp"
      android:layout_marginLeft="250dp"
-     android:layout_marginTop="20dp"
+     android:layout_marginTop="32dp"
+     android:textSize="16sp"
      android:text="Earring"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3" />
@@ -53,7 +56,8 @@
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginLeft="40dp"
-     android:layout_marginTop="20dp"
+     android:layout_marginTop="32dp"
+     android:textSize="17sp"
      android:text="Username"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +69,8 @@
      android:layout_height="wrap_content"
      android:layout_marginStart="250dp"
      android:layout_marginLeft="250dp"
-     android:layout_marginTop="20dp"
+     android:layout_marginTop="32dp"
+     android:textSize="16sp"
      android:text="Mai_0302"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_product" />
@@ -76,7 +81,8 @@
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginLeft="40dp"
-     android:layout_marginTop="20dp"
+     android:layout_marginTop="32dp"
+     android:textSize="17sp"
      android:text="Size"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +94,8 @@
      android:layout_height="wrap_content"
      android:layout_marginStart="250dp"
      android:layout_marginLeft="250dp"
-     android:layout_marginTop="20dp"
+     android:layout_marginTop="32dp"
+     android:textSize="16sp"
      android:text="S"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_user2" />
@@ -100,6 +107,7 @@
      android:layout_marginStart="40dp"
      android:layout_marginLeft="40dp"
      android:layout_marginTop="32dp"
+     android:textSize="17sp"
      android:text="Condition"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
@@ -107,12 +115,13 @@
 
  <TextView
      android:id="@+id/text_condi2"
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
+     android:layout_width="149dp"
+     android:layout_height="95dp"
      android:layout_marginStart="250dp"
      android:layout_marginLeft="250dp"
-     android:layout_marginTop="20dp"
+     android:layout_marginTop="32dp"
      android:text="Unused."
+     android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_size2" />
 
@@ -120,12 +129,14 @@
      android:id="@+id/button_borrow"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
-     android:layout_marginTop="30dp"
+     android:layout_marginTop="32dp"
      android:layout_marginEnd="160dp"
      android:layout_marginRight="160dp"
      android:text="Borrow"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_condi2" />
+
+
 
 
  <!--  </FrameLayout>-->
