--- a/app/src/main/res/layout/fragment_sustainableclothes.xml
+++ b/app/src/main/res/layout/fragment_sustainableclothes.xml
@@ -26,6 +26,7 @@
         android:layout_marginStart="65dp"
         android:layout_marginLeft="65dp"
         android:layout_marginTop="32dp"
+        android:textSize="16sp"
         android:text="1. Make a phone call to our company. Choose your favorite sustainable clothes and tell us."
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/how_use" />
@@ -36,9 +37,9 @@
         android:layout_height="77dp"
         android:layout_marginStart="65dp"
         android:layout_marginLeft="65dp"
-        android:text="2. Go to the target stores and buy your favorite sustainable clothes. Show your username then we will authenticate your account.
-
-"
+        android:layout_marginTop="32dp"
+        android:text="2. Go to the target stores and buy your favorite sustainable clothes. Show your username then we will authenticate your account."
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/step1" />
 
@@ -49,6 +50,7 @@
         android:layout_marginStart="65dp"
         android:layout_marginLeft="65dp"
         android:layout_marginTop="32dp"
+        android:textSize="16sp"
         android:text="A clothes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_targetStores" />
@@ -60,6 +62,7 @@
         android:layout_marginStart="65dp"
         android:layout_marginLeft="65dp"
         android:layout_marginTop="32dp"
+        android:textSize="16sp"
         android:text="B clothes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/targetA" />
@@ -71,6 +74,7 @@
         android:layout_marginStart="65dp"
         android:layout_marginLeft="65dp"
         android:layout_marginTop="32dp"
+        android:textSize="16sp"
         android:text="C clothes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/targetB" />
@@ -82,6 +86,7 @@
         android:layout_marginStart="65dp"
         android:layout_marginLeft="65dp"
         android:layout_marginTop="32dp"
+        android:textSize="16sp"
         android:text="D clothes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/targetC" />
